--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "13.0.5",
+    "next-share": "^0.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "6.0.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
